@@ -1,20 +1,24 @@
 #
 # Plone 2.5 Backward compatible
 #
+import logging
+logger = logging.getLogger('eea.geotags.plone25')
 try:
     from Products.CMFPlone.CatalogTool import _eioRegistry
-    def object_provides(object, portal, **kw):
-        return [i.__identifier__ for i in providedBy(object).flattened()]
+    from zope.interface import providedBy
+    def object_provides(obj, portal, **kw):
+        return [i.__identifier__ for i in providedBy(obj).flattened()]
 
     if not _eioRegistry.has_key('object_provides'):
         _eioRegistry.register('object_provides', object_provides)
 except ImportError, err:
-    pass
+    logger.info(err)
 #
 # Plone 2.5 register skins directory
 #
 try:
     import zope.annotation
+    zope.annotation #pyflakes
 except ImportError:
     #BBB Plone 2.5
     from os.path import dirname
